--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles/reset.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
     <header class="header-section">
       <div class="content-wrapper">
         <div class="header-content">
           <a href="#" class="logo">SOFTGRAY</a>
-          <nav>
+          <nav class="nav-bar">
             <a href="#" class="nav-item">PRODUCTS</a>
             <a href="#" class="nav-item">SERVICES</a>
             <a href="#" class="nav-item">ABOUT</a>
@@ -29,7 +29,7 @@
         </div>
       </div>
     </header>
-    <div class="hero-section">
+    <section class="hero-section">
       <div class="content-wrapper">
         <div class="hero-content">
           <h1 class="hero-title">Creative Solutions</h1>
@@ -41,8 +41,8 @@
           </p>
         </div>
       </div>
-    </div>
-    <div class="features-section">
+    </section>
+    <section class="features-section">
       <div class="content-wrapper">
         <div class="features-content">
           <div class="feature-item">
@@ -87,13 +87,15 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
     <div class="showcase-section">
       <div class="content-wrapper">
         <div class="showcase-content">
           <div class="showcase-text">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <h2>LOREM IPSUM</h2>
+            <p class="showcase-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
+            <h2 class="showcase-title">LOREM IPSUM</h2>
             <p class="showcase-paragraph">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, eos! Ea
               reprehenderit earum, tempore excepturi deserunt vero repellat deleniti
