--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
         <div class="header-content">
           <a href="#" class="logo">SOFTGRAY</a>
           <nav class="nav-bar">
-            <a href="#" class="nav-item">PRODUCTS</a>
-            <a href="#" class="nav-item">SERVICES</a>
-            <a href="#" class="nav-item">ABOUT</a>
-            <a href="#" class="nav-item">JOBS</a>
-            <a href="#" class="nav-item">CONTACT</a>
-            <span class="nav-number">+81-00-0000-0000</span>
+            <ul>
+              <li><a href="#" class="nav-item">PRODUCTS</a></li>
+              <li><a href="#" class="nav-item">SERVICES</a></li>
+              <li><a href="#" class="nav-item">ABOUT</a></li>
+              <li><a href="#" class="nav-item">JOBS</a></li>
+              <li><a href="#" class="nav-item">CONTACT</a></li>
+              <li><span class="nav-number">+81-00-0000-0000</span></li>
+            </ul>
           </nav>
         </div>
       </div>
@@ -88,7 +90,7 @@
         </div>
       </div>
     </section>
-    <div class="showcase-section">
+    <section class="showcase-section">
       <div class="content-wrapper">
         <div class="showcase-content">
           <div class="showcase-text">
@@ -125,8 +127,8 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="news-section">
+    </section>
+    <section class="news-section">
       <div class="content-wrapper">
         <div class="news-content">
           <div class="new">
@@ -181,7 +183,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
     <footer class="footer-section">
       <div class="content-wrapper">
         <div class="footer-content">
@@ -197,13 +199,15 @@
               </div>
               <div class="company-firm">copyright 2014 SUNRISE Inc</div>
             </div>
-            <div class="links">
-              <a href="#">PRODUCTS</a>
-              <a href="#">SERVICES</a>
-              <a href="#">ABOUT</a>
-              <a href="#">JOBS</a>
-              <a href="#">CONTACT</a>
-            </div>
+            <nav class="links">
+              <ul>
+                <li><a href="#">PRODUCTS</a></li>
+                <li><a href="#">SERVICES</a></li>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">JOBS</a></li>
+                <li><a href="#">CONTACT</a></li>
+              </ul>
+            </nav>
           </div>
           <div class="form">
             <p>NEWSLETTER</p>
