feat: correct some semantic tags

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </header>
     <section class="hero-section">
       <div class="content-wrapper">
-        <div class="hero-content">
+        <article class="hero-content">
           <h1 class="hero-title">Creative Solutions</h1>
           <p class="hero-paragraph">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores
@@ -41,63 +41,63 @@
             temporibus perspiciatis illum voluptas tenetur deleniti vel nulla dolorem
             dolore!
           </p>
-        </div>
+        </article>
       </div>
     </section>
     <section class="features-section">
       <div class="content-wrapper">
         <div class="features-content">
-          <div class="feature-item">
+          <article class="feature-item">
             <i class="far fa-comment-alt"></i>
-            <h2 class="features-subtitle">Consulting</h2>
-            <div class="item-text">
+            <h1 class="features-subtitle">Consulting</h1>
+            <p class="item-text">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus illum
               temporibus ipsum, reiciendis nulla incidunt quidem provident minus?
               Doloremque dignissimos reprehenderit a expedita praesentium quia eos eveniet
               accusamus, cupiditate error!
-            </div>
-          </div>
-          <div class="feature-item">
+            </p>
+          </article>
+          <article class="feature-item">
             <i class="far fa-comment-alt"></i>
-            <h2 class="features-subtitle">Consulting</h2>
-            <div class="item-text">
+            <h1 class="features-subtitle">Consulting</h1>
+            <p class="item-text">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus illum
               temporibus ipsum, reiciendis nulla incidunt quidem provident minus?
               Doloremque dignissimos reprehenderit a expedita praesentium quia eos eveniet
               accusamus, cupiditate error!
-            </div>
-          </div>
-          <div class="feature-item">
+            </p>
+          </article>
+          <article class="feature-item">
             <i class="far fa-comment-alt"></i>
-            <h2 class="features-subtitle">Consulting</h2>
-            <div class="item-text">
+            <h1 class="features-subtitle">Consulting</h1>
+            <p class="item-text">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus illum
               temporibus ipsum, reiciendis nulla incidunt quidem provident minus?
               Doloremque dignissimos reprehenderit a expedita praesentium quia eos eveniet
               accusamus, cupiditate error!
-            </div>
-          </div>
-          <div class="feature-item">
+            </p>
+          </article>
+          <article class="feature-item">
             <i class="far fa-comment-alt"></i>
-            <h2 class="features-subtitle">Consulting</h2>
-            <div class="item-text">
+            <h1 class="features-subtitle">Consulting</h1>
+            <p class="item-text">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus illum
               temporibus ipsum, reiciendis nulla incidunt quidem provident minus?
               Doloremque dignissimos reprehenderit a expedita praesentium quia eos eveniet
               accusamus, cupiditate error!
-            </div>
-          </div>
+            </p>
+          </article>
         </div>
       </div>
     </section>
     <section class="showcase-section">
       <div class="content-wrapper">
-        <div class="showcase-content">
-          <div class="showcase-text">
+        <article class="showcase-content">
+          <header class="showcase-text">
             <p class="showcase-description">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </p>
-            <h2 class="showcase-title">LOREM IPSUM</h2>
+            <h1 class="showcase-title">LOREM IPSUM</h1>
             <p class="showcase-paragraph">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, eos! Ea
               reprehenderit earum, tempore excepturi deserunt vero repellat deleniti
@@ -105,13 +105,13 @@
               cupiditate!
             </p>
             <a href="#" class="showcase-button">VIEW MORE</a>
-          </div>
+          </header>
           <img
             src="https://purepng.com/public/uploads/medium/purepng.com-macbookmacbooknotebookcomputersapple-inmacbook-familyapple-laptops-1701528360315ygq8e.png"
             alt=""
             class="laptop-image"
           />
-        </div>
+        </article>
         <div class="product-container">
           <div class="product product-1">
             <p class="product-description">MAGAZINE PUBLISHING TOOL</p>
